[gd_scene load_steps=3 format=3 uid="uid://dee1xjnbe0hxf"]

[ext_resource type="Theme" uid="uid://nkt57yku5n0s" path="res://Assets/UI/Resources/Themes/tablet_theme.tres" id="1_6uop4"]
[ext_resource type="Script" path="res://Assets/UI/Tablets/Pause Menu/pause_buttons_2d.gd" id="1_xwhgh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwhgh")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Margin" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="UI" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Margin/UI"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("1_6uop4")
theme_override_colors/font_color = Color(1, 0.643137, 0, 1)
text = "Pause Menu"

[node name="Line" type="ColorRect" parent="Margin/UI"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(1, 0.643137, 0, 1)

[node name="Margin" type="MarginContainer" parent="Margin/UI"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/UI/Margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Resume" type="Button" parent="Margin/UI/Margin/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_6uop4")
text = "Resume"

[node name="Options" type="Button" parent="Margin/UI/Margin/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_6uop4")
text = "Options
"

[node name="Reload" type="Button" parent="Margin/UI/Margin/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_6uop4")
text = "Reload
"

[node name="MainMenu" type="Button" parent="Margin/UI/Margin/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_6uop4")
text = "Main Menu
"

[node name="Quit" type="Button" parent="Margin/UI/Margin/VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme = ExtResource("1_6uop4")
text = "Quit"

[connection signal="pressed" from="Margin/UI/Margin/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Margin/UI/Margin/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Margin/UI/Margin/VBoxContainer/Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="Margin/UI/Margin/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Margin/UI/Margin/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
